Date	Added

2006/09/11
	* Corrected name of config settings pc_luk_status_def, mob_luk_status_def
	  (status.conf) [Skotlex]
	* Changed the default of enable_baseatk to 9 (player + homun) [Skotlex]
	* Changed the default of enable_perfect_flee to 1 (players only) [Skotlex]
2006/09/09
	* Removed noteleport flags from Geffenia maps [Playtester]
2006/09/07
	* Changed gvg_short_attack_damage_rate to 80, as leaked X.2 [Vicious]
2006/09/01
	* Merged config setting 'partial_name_scan' (gm.conf). When set to yes
	  (default = no), you can use @ commands which require a player, and it will
	  do a partial name match, when set to no, input name must match exactly
	  [Skotlex]
	* Merged config setting 'attack_walk_delay' (battle.conf). Defaults to 0.
	  When set, it makes it so a character cannot move inmediately after
	  attacking, on Aegis the default is 0, but this leads to sprite desyncs
	  pretty easily; see conf file for more info. [Skotlex]
2006/08/31
	* Merged config setting clear_skills_on_warp (skill.conf), specifies
	  whether ground-skills should be removed when the caster warps to another
	  map (defaults to all) [Skotlex]
	* Made the default for clear_skills_on_death 0. [Skotlex]
	* Removed trap_settings&2 as it's no longer required [Skotlex]
	* Corrected battle config name max_walk_rate, it should be named
	  max_walk_speed. [Skotlex]
2006/08/28
	* Merged atcommands @jailfor, @jailtime, @charjailtime (atcommand_conf)
	  [Skotlex]
	* New manner/muting system. Where muting is always allowed, but
	  you use manner_system to specify what does being muted blocks (misc.conf)
	  [Skotlex]
	* Removed setting muting_players as it's always enabled now. [Skotlex]
	* pk_mode setting update so you can enable/disable the manner penalty when
	  killing other players (misc.conf) [Skotlex]
	* Added config setting "duel_only_on_same_map" (misc.conf) [Skotlex]
2006/08/24
	* Merged command @charspeed [Skotlex]
	* Merged the expanded use of the enable_logs setting. [Skotlex]